setting up the pom for sonatype deployment and release

--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,20 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.eveningsamurai.symphony</groupId>
+  <groupId>com.eveningsamurai</groupId>
   <artifactId>symphony</artifactId>
   <packaging>jar</packaging>
   <version>0.1</version>
-  <name>symphony</name>
+  
+  <name>Symphony</name>
+  <description>Unofficial Java wrapper for the Searchlight Conductor API</description>
 
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
+	
   <licenses>
   	<license>
   	  <name>Apache License, Version 2.0</name>
@@ -16,7 +24,19 @@
   	</license>
   </licenses>
   
+  <developers>
+    <developer>
+      <name>Avinash Padmanabhan</name>
+      <email>avinashpadmanabhan@gmail.com</email>
+      <organization></organization>
+      <organizationUrl>http://eveningsamurai.wordpress.com</organizationUrl>
+    </developer>
+  </developers>
+  
   <scm>
+    <connection>scm:git:git@github.com:eveningsamurai/symphony.git</connection>
+    <developerConnection>scm:git:git@github.com:eveningsamurai/symphony.git</developerConnection>
+    <url>git@github.com:eveningsamurai/symphony.git</url>
   </scm>	
 
   <dependencies>
@@ -62,4 +82,77 @@
 			<scope>test</scope>
 		</dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+		  <version>2.4</version>
+        <executions>
+          <execution>
+          	<id>attach-sources</id>
+          	<goals>
+          	  <goal>jar-no-fork</goal>
+          	</goals>
+          </execution>
+        </executions>
+      </plugin>	
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+		  <version>2.10.3</version>
+        <executions>
+          <execution>
+          	<id>attach-javadocs</id>
+          	<goals>
+          	  <goal>jar</goal>
+          	</goals>
+          </execution>
+        </executions>
+      </plugin>	
+    </plugins>
+  </build>
+  
+  <profiles>
+  	<profile>
+	    <id>release-sign-artifacts</id>
+	    <activation>
+	      <property>
+	        <name>performRelease</name>
+	        <value>true</value>
+	      </property>
+	    </activation>
+	    <build>
+	      <plugins>
+	        <plugin>
+	          <groupId>org.apache.maven.plugins</groupId>
+	          <artifactId>maven-gpg-plugin</artifactId>
+	          <version>1.6</version>
+	          <executions>
+	            <execution>
+	              <id>sign-artifacts</id>
+	              <phase>verify</phase>
+	              <goals>
+	                <goal>sign</goal>
+	              </goals>
+	            </execution>
+	          </executions>
+	        </plugin>
+	      </plugins>
+	    </build>
+	  </profile>
+	</profiles>
+		
+	<distributionManagement>
+	  <snapshotRepository>
+	    <id>ossrh</id>
+	    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	  </snapshotRepository>
+	  <repository>
+	    <id>ossrh</id>
+	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+	  </repository>
+	</distributionManagement>
+	
 </project>
