--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.eveningsamurai</groupId>
@@ -9,13 +8,8 @@
   
   <name>Symphony</name>
   <description>Unofficial Java wrapper for the Searchlight Conductor API</description>
+  <url>https://github.com/eveningsamurai/symphony</url>
 
-  <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
-  </parent>
-	
   <licenses>
   	<license>
   	  <name>Apache License, Version 2.0</name>
@@ -82,6 +76,13 @@
 			<scope>test</scope>
 		</dependency>
   </dependencies>
+
+	<distributionManagement>
+	  <snapshotRepository>
+		 <id>ossrh</id>
+		 <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	  </snapshotRepository>
+	</distributionManagement>
   
   <build>
     <plugins>
@@ -111,48 +112,32 @@
           </execution>
         </executions>
       </plugin>	
+		<plugin>
+		  <groupId>org.sonatype.plugins</groupId>
+		  <artifactId>nexus-staging-maven-plugin</artifactId>
+		  <version>1.6.3</version>
+		  <extensions>true</extensions>
+		  <configuration>
+			  <serverId>ossrh</serverId>
+			  <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+			  <autoReleaseAfterClose>true</autoReleaseAfterClose>
+		  </configuration>
+		</plugin>
+	  <plugin>
+		 <groupId>org.apache.maven.plugins</groupId>
+		 <artifactId>maven-gpg-plugin</artifactId>
+		 <version>1.6</version>
+		 <executions>
+			<execution>
+			  <id>sign-artifacts</id>
+			  <phase>verify</phase>
+			  <goals>
+				 <goal>sign</goal>
+			  </goals>
+			</execution>
+		 </executions>
+	  </plugin>
     </plugins>
   </build>
   
-  <profiles>
-  	<profile>
-	    <id>release-sign-artifacts</id>
-	    <activation>
-	      <property>
-	        <name>performRelease</name>
-	        <value>true</value>
-	      </property>
-	    </activation>
-	    <build>
-	      <plugins>
-	        <plugin>
-	          <groupId>org.apache.maven.plugins</groupId>
-	          <artifactId>maven-gpg-plugin</artifactId>
-	          <version>1.6</version>
-	          <executions>
-	            <execution>
-	              <id>sign-artifacts</id>
-	              <phase>verify</phase>
-	              <goals>
-	                <goal>sign</goal>
-	              </goals>
-	            </execution>
-	          </executions>
-	        </plugin>
-	      </plugins>
-	    </build>
-	  </profile>
-	</profiles>
-		
-	<distributionManagement>
-	  <snapshotRepository>
-	    <id>ossrh</id>
-	    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-	  </snapshotRepository>
-	  <repository>
-	    <id>ossrh</id>
-	    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-	  </repository>
-	</distributionManagement>
-	
 </project>
