--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.eveningsamurai</groupId>
   <artifactId>symphony</artifactId>
   <packaging>jar</packaging>
-  <version>0.1</version>
+  <version>0.1-SNAPSHOT</version>
   
   <name>Symphony</name>
   <description>Unofficial Java wrapper for the Searchlight Conductor API</description>
@@ -79,8 +79,12 @@
 
 	<distributionManagement>
 	  <snapshotRepository>
-		 <id>ossrh</id>
+		 <id>nexus-snapshots</id>
 		 <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+	  </snapshotRepository>
+	  <snapshotRepository>
+		 <id>nexus-releases</id>
+		 <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 	  </snapshotRepository>
 	</distributionManagement>
   
