--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
   </scm>	
 
   <dependencies>
+	  <dependency>
+		 <groupId>org.apache.maven.plugins</groupId>
+		 <artifactId>maven-release-plugin</artifactId>
+		 <version>2.5.2</version>
+		</dependency>
+
   		 <!--  JSON serialization/deserialization -->
 	    <dependency>
 			<groupId>com.google.code.gson</groupId>
