committing sonatype parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,11 @@
   <name>Symphony</name>
   <description>Unofficial Java wrapper for the Searchlight Conductor API</description>
   <url>https://github.com/eveningsamurai/symphony</url>
-
+<parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+</parent>
   <licenses>
   	<license>
   	  <name>Apache License, Version 2.0</name>
