--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,23 @@
     <url>git@github.com:eveningsamurai/symphony.git</url>
   </scm>	
 
+  <dependencies>
+
+  		 <!--  JSON serialization/deserialization -->
+	    <dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.2.4</version>
+		</dependency>
+		<!-- Utility -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>18.0</version>
+			<scope>compile</scope>
+		</dependency>
+
+	</dependencies>
 
 	<distributionManagement>
 	  <snapshotRepository>
