--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,13 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.eveningsamurai</groupId>
+  <groupId>com.eveningsamurai.symphony</groupId>
   <artifactId>symphony</artifactId>
-  <packaging>jar</packaging>
   <version>0.1-SNAPSHOT</version>
+  <packaging>jar</packaging>
   
   <name>Symphony</name>
   <description>Unofficial Java wrapper for the Searchlight Conductor API</description>
@@ -13,8 +16,8 @@
   <licenses>
   	<license>
   	  <name>Apache License, Version 2.0</name>
-  	  <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-  	  <distribution>repo</distribution>
+  	  <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+	  <distribution>repo</distribution>
   	</license>
   </licenses>
   
@@ -22,7 +25,7 @@
     <developer>
       <name>Avinash Padmanabhan</name>
       <email>avinashpadmanabhan@gmail.com</email>
-      <organization />
+		<organization>Self</organization>
       <organizationUrl>http://eveningsamurai.wordpress.com</organizationUrl>
     </developer>
   </developers>
@@ -34,20 +37,19 @@
   </scm>	
 
   <dependencies>
-
-  		 <!--  JSON serialization/deserialization -->
-	    <dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.2.4</version>
-		</dependency>
-		<!-- Utility -->
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
-			<scope>compile</scope>
-		</dependency>
+	 <!--  JSON serialization/deserialization -->
+	 <dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.2.4</version>
+	</dependency>
+	<!-- Utility -->
+	<dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>18.0</version>
+		<scope>compile</scope>
+	</dependency>
 
 	</dependencies>
 
@@ -67,7 +69,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-		  <version>2.4</version>
+		  <version>2.2.1</version>
         <executions>
           <execution>
           	<id>attach-sources</id>
@@ -80,7 +82,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-		  <version>2.10.3</version>
+		  <version>2.9</version>
         <executions>
           <execution>
           	<id>attach-javadocs</id>
@@ -93,7 +95,7 @@
 	  <plugin>
 		 <groupId>org.apache.maven.plugins</groupId>
 		 <artifactId>maven-gpg-plugin</artifactId>
-		 <version>1.6</version>
+		 <version>1.4</version>
 		 <executions>
 			<execution>
 			  <id>sign-artifacts</id>
@@ -103,6 +105,20 @@
 			  </goals>
 			</execution>
 		 </executions>
+	  </plugin>
+	  <plugin>
+		 <groupId>org.apache.maven.plugins</groupId>
+		 <artifactId>maven-compiler-plugin</artifactId>
+		 <version>3.1</version>
+		 <configuration>
+			 <source>1.8</source>
+			 <target>1.8</target>
+		 </configuration>
+	  </plugin>
+	  <plugin>
+		 <groupId>org.apache.maven.plugins</groupId>
+		 <artifactId>maven-release-plugin</artifactId>
+		 <version>2.4.1</version>
 	  </plugin>
     </plugins>
   </build>
