using the gpg suite instead of brew gpg and using a new key

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,9 @@
 			  </goals>
 			</execution>
 		 </executions>
+		 <configuration>
+			 <keyname>75C56291</keyname>
+		 </configuration>
 	  </plugin>
 	  <plugin>
 		 <groupId>org.apache.maven.plugins</groupId>
