--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.eveningsamurai.symphony</groupId>
   <artifactId>symphony</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.2.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <name>Symphony</name>
@@ -32,6 +32,7 @@
      <connection>scm:git:https://github.com/eveningsamurai/symphony.git</connection>
      <developerConnection>scm:git:https://github.com/eveningsamurai/symphony.git</developerConnection>
     <url>https://github.com/eveningsamurai/symphony.git</url>
+    <tag>HEAD</tag>
   </scm>	
 
   <dependencies>
@@ -137,6 +138,9 @@
 		 <groupId>org.apache.maven.plugins</groupId>
 		 <artifactId>maven-release-plugin</artifactId>
 		 <version>2.4.1</version>
+		 <configuration>
+			 <tagNameFormat>v@{project.version}</tagNameFormat>
+		 </configuration>
 	  </plugin>
     </plugins>
   </build>
