--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,18 @@
 		 <configuration>
 			 <tagNameFormat>v@{project.version}</tagNameFormat>
 		 </configuration>
+		<dependencies>
+			<dependency>
+						<groupId>org.apache.maven.scm</groupId>
+						<artifactId>maven-scm-api</artifactId>
+						<version>1.9.1</version>
+				  </dependency>
+				  <dependency>
+						<groupId>org.apache.maven.scm</groupId>
+						<artifactId>maven-scm-provider-gitexe</artifactId>
+						<version>1.9.1</version>
+				  </dependency>
+		</dependencies>
 	  </plugin>
     </plugins>
   </build>
